# agent

./: .env.test  .gitignore  Dockerfile  README.md  pylintrc  pyproject.toml
.github/workflows/: build_docker_image.yaml  deploy_abc.yaml
envs/: .env.example
specs/: openai_chat.json  wadiz_example.json  worker_agent_2.json
src/: container.py  domain.py  main.py  settings.py
src/api/web/: app.py
src/api/web/router/: chat.py
src/application/: agent.py
src/domain/: factory.py  repository.py
src/domain/entity/node/: __init__.py  base.py  chat.py
src/domain/entity/state/: __init__.py  base.py  messages.py
src/domain/service/: graph.py
src/domain/vo/: edge.py
src/infrastructure/: chat_model.py  factory.py  hf_model_repository.py
tests/: conftest.py
tests/api/: test_simple_chat.py  test_web.py
tests/application/agent/: test_agent.py
tests/domain/: conftest.py  test_node.py
tests/domain/entity/node/: test_chat_node.py
tests/domain/entity/state/: test_message_list_state.py  test_single_message_state.py
tests/domain/service/: test_graph_service.py
tests/specs/: abc.json  dummy_chat.json  fake_chat.json
