[project]
name = "agent"
version = "0.1.0"
description = "Graph-based AI Agent Repository of SJYB"
authors = [
    {name = "Sijin Kim", email = "tlwlsdi0306@gmail.com"},
    {name = "Youngbeom Choi", email = "helloybz@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "langgraph (>=0.3.33,<0.4.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "huggingface-hub (>=0.31.1,<0.32.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "msgspec (>=0.19.0,<0.20.0)"
]


[tool.poetry]
package-mode=false


[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
poethepoet = "*"
trio = "^0.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
incremental = false
plugins = ["pydantic.mypy"]

[tool.poe.tasks]
    [tool.poe.tasks.format]
    help = "Run Ruff foramt"
    cmd  = "ruff format ."

    [tool.poe.tasks.format-check]
    help = "Run Ruff formatter without editing. (It is for ensuring that the codes are already formatted.)"
    cmd  = "ruff format --check ."

    [tool.poe.tasks.type-mypy]
    help = "Run the type checker"
    cmd  = "mypy src --ignore-missing-imports"

    [tool.poe.tasks.lint-ruff]
    help = "Run ruff-linter"
    cmd  = "ruff check ./src --select I --fix"

    [tool.poe.tasks.lint-pylint]
    help = "Run pylint"
    cmd  = "pylint ./src"

    [tool.poe.tasks.lint]
    help = "Run the linters"
    sequence = ["lint-ruff", "lint-pylint"]

    [tool.poe.tasks.test]
    help = "Run unit and feature tests"
    cmd  = "pytest --cov=src tests/"

    [tool.poe.tasks.check]
    help     = "Run all checks on the code base"
    sequence = ["format-check", "lint", "type-mypy", "test"]

    [tool.poe.tasks.web]
    help  = "Run web app on local"
    cmd   = "python src/main.py web run"
    env = {PYTHONPATH="${PYTHONPATH}:/src"}

    [tool.poe.tasks.clean]
    help = "Remove generated files"
    cmd  = """
        rm -rf .coverage
            .mypy_cache
            .pytest_cache
            .ruff_cache
            ./**/__pycache__
    """

[tool.coverage.run]
branch = true
omit = ["*/main.py", "*/commands.py"]
relative_files = true


[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]
fail_under = 60
show_missing = true